--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
   "name": "@frptools/structural",
-  "version": "1.0.0",
-  "description": "Tools for implementing high performance, batch-mutation-capable persistent data structures",
-  "scripts": {
-    "test-dev": "mocha --opts ./mocha.opts --watch --bail"
-  },
+  "version": "1.0.2",
+  "description": "[FRPTools] Tools for implementing high performance, batch-mutation-capable persistent data structures",
   "main": "lib/commonjs/index.js",
-  "module": "lib/module/index.js",
-  "jsnext:main": "lib/module/index.js",
-  "typings": "lib/typings/index.d.ts",
+  "module": "lib/es2015/index.js",
+  "jsnext:main": "lib/es2015/index.js",
+  "typings": "lib/es2015/index.d.ts",
+  "scripts": {
+    "clean": "rimraf ./lib ./.build",
+    "build-cjs": "tsc -p tsconfig.commonjs.json",
+    "build-es2015": "tsc -p tsconfig.es2015.json",
+    "build-tests": "tsc -p tsconfig.tests.json",
+    "build": "npm run build-cjs && npm run build-es2015 && npm run build-tests",
+    "lint": "tslint -p tsconfig.es2015.json && tslint -p tsconfig.tests.json",
+    "test": "ava --timeout=30s --tap",
+    "test-dev": "ava --timeout=30s --fail-fast --watch"
+  },
   "files": [
     "lib"
   ],
@@ -16,8 +23,23 @@
   "license": "MIT",
   "bugs": "https://github.com/frptools/mutation/issues",
   "repository": "git@github.com:frptools/mutation.git",
+  "dependencies": {
+    "@frptools/corelib": "^1.1.1"
+  },
   "devDependencies": {
+    "@frptools/config": "^1.0.0",
+    "@types/node": "^9.3.0",
+    "ava": "^0.24.0",
+    "rimraf": "^2.6.2",
     "tslint": "^5.9.1",
     "typescript": "^2.6.2"
+  },
+  "ava": {
+    "files": [
+      ".build/tests/{functions,internals}/*.js"
+    ],
+    "source": [
+      ".build/**/*.js"
+    ]
   }
 }
