--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,18 @@
 {
   "compilerOptions": {
     "moduleResolution": "node",
+    "module": "es2015",
+    "declaration": true,
     "strictNullChecks": true,
     "target": "es6",
     "sourceMap": true,
+    "preserveConstEnums": false,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "declaration": true,
-    "pretty": true,
-    "module": "commonjs",
+    "forceConsistentCasingInFileNames": true,
     "removeComments": false,
     "noUnusedLocals": true,
-    "lib": ["dom", "es6", "es7", "es2015"],
-    "outDir": "./.build",
-    "forceConsistentCasingInFileNames": true
-  },
-  "include": [
-    "./src/**/*.ts",
-    "./tests/**/*.ts"
-  ],
-  "exclude": [
-    "./lib"
-  ]
+    "lib": ["es2015", "es2016", "es2017"],
+    "skipLibCheck": true,
+    "noEmit": true
+  }
 }
